[package]
name = "game_2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"

# [profile.dev]
# opt-level=3
# debug=false
# debug-assersions=false
# overflow-checks=false
# incremental=false
# codegen-units=16

[[bench]]
name = "bench_board_manipulations"
harness = false